fixed section 5 max width and content's position on small devices (360px width)

--- a/css/org_indiv.css
+++ b/css/org_indiv.css
@@ -53,6 +53,7 @@ body {
 		}
 		#section-5 * h1 {
 			font-size: calc(1rem + 1.5vw);
+			padding: 0 1em;
 		}
 	}
 	/* other phone sizes */
@@ -84,6 +85,23 @@ body {
 		@media (max-width: 400px) { 
 			#section-5 {
 				margin-bottom: 6vw;
+			}
+		}
+		@media (max-width: 384px) {
+			#section-5 * img {
+				max-height: calc(165px + 20vw);
+			}
+			#section-5 {
+				margin-bottom: 3vw;
+			}
+			#section-5 .row {
+				gap: 28vw;
+			}
+			#section-5:has(.has-video) {
+				margin-bottom: 12vw;
+			}
+			#section-5 .row:has(.has-video) {
+				gap: 40vw;
 			}
 		}
 	}
@@ -143,11 +161,11 @@ body {
 		padding: 3em;
 		width: 85%
 	}
-	#section-5 {
-		width: 85%;
-	}
 	#section-4 {
 		max-width: 85vw;
+	}
+	#section-5 {
+		width: 85vw;
 	}
 	#section-5 .has-video {
 		max-height: 240px;
@@ -238,7 +256,7 @@ body {
 		margin-bottom: 2em;
 	}
 	#section-5 {
-		max-width: var(--max-width-2);
+		max-width: 58vw;
 		margin-bottom: 0;
 	}
 	@media (max-width: 1250px) {
